[package]
name = "p2p-handshake"
authors = ["Denis Deniz <denis2.glez@gmail.com>"]
license = "MIT"
repository = "https://github.com/denis2glez/p2p-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
