[package]
name = "p2p-tls-cli"
authors = ["Denis Deniz <denis2.glez@gmail.com>"]
license = "MIT"
repository = "https://github.com/denis2glez/p2p-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
p2p-tls-handshake = { path = "../p2p-tls-handshake" }
clap = { version = "4.4.8", features = ["derive", "env"] }
dotenvy = "0.15.7"
anyhow = "1.0.75"
futures = { version = "0.3.29", default-features = false }
tokio = { version = "1.34.0", features = [
    "time",
    "rt",
    "macros",
    "sync",
    "rt-multi-thread",
] }
libp2p = { version = "0.53.1", features = [
    "identify",
    "macros",
    "tcp",
    "tls",
    "tokio",
    "yamux",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
celestia-types = { git = "https://github.com/eigerco/celestia-node-rs" }

[dev-dependencies]
celestia-rpc = { git = "https://github.com/eigerco/celestia-node-rs" }
jsonrpsee = { version = "0.20", features = ["client-core", "macros"] }
