[package]
name = "p2p-tls-handshake"
authors = ["Denis Deniz <denis2.glez@gmail.com>"]
license = "MIT"
repository = "https://github.com/denis2glez/p2p-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "0.22.0", features = ["dangerous_configuration"] }
futures = { version = "0.3.29", default-features = false }
futures-rustls = "0.24.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libp2p-core = "0.41.0"
libp2p-identity = "0.2.7"
multistream-select = "0.13.0"
x509-parser = "0.15.1"
webpki = { version = "0.101.7", package = "rustls-webpki", features = ["std"] }
rcgen = "0.11.3"
yasna = "0.5.2"
ring = "0.17.5"
thiserror = "1.0.50"
pin-project = "1.1.3"

[dev-dependencies]
